[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/Valve.gd" type="Script" id=1]
[ext_resource path="res://images/valve.png" type="Texture" id=2]
[ext_resource path="res://images/wheel-pipe.png" type="Texture" id=3]
[ext_resource path="res://images/wheel.png" type="Texture" id=4]
[ext_resource path="res://images/wheel-top.png" type="Texture" id=5]
[ext_resource path="res://font/m6x11.tres" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60, 128 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 128, 60 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60, 128 )

[node name="Valve" type="StaticBody2D"]
scale = Vector2( 1.5, 1.5 )
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18 )
shape = SubResource( 1 )

[node name="Overlay" type="Node" parent="."]

[node name="Valve" type="Node2D" parent="Overlay"]
visible = false
position = Vector2( 128, 128 )

[node name="Pipe" type="Sprite" parent="Overlay/Valve"]
texture = ExtResource( 3 )

[node name="Wheel" type="Sprite" parent="Overlay/Valve"]
texture = ExtResource( 4 )

[node name="Top" type="Sprite" parent="Overlay/Valve"]
texture = ExtResource( 5 )

[node name="TurnsLeft" type="Label" parent="Overlay/Valve"]
margin_left = -165.0
margin_top = -25.0
margin_right = 167.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Turns Left: 0"
align = 1
valign = 1

[node name="Triggers" type="Node2D" parent="Overlay"]
visible = false
position = Vector2( 128, 128 )

[node name="A" type="Area2D" parent="Overlay/Triggers"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Triggers/A"]
position = Vector2( -68, 0 )
shape = SubResource( 3 )

[node name="B" type="Area2D" parent="Overlay/Triggers"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Triggers/B"]
modulate = Color( 0, 1, 0.226563, 1 )
position = Vector2( 0, -68 )
shape = SubResource( 4 )

[node name="C" type="Area2D" parent="Overlay/Triggers"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Triggers/C"]
modulate = Color( 0, 0.53125, 1, 1 )
position = Vector2( 0, 68 )
shape = SubResource( 4 )

[node name="D" type="Area2D" parent="Overlay/Triggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Triggers/D"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 68, 0 )
shape = SubResource( 5 )
[connection signal="mouse_entered" from="Overlay/Triggers/A" to="." method="_on_A_mouse_entered"]
[connection signal="mouse_entered" from="Overlay/Triggers/B" to="." method="_on_B_mouse_entered"]
[connection signal="mouse_entered" from="Overlay/Triggers/C" to="." method="_on_C_mouse_entered"]
[connection signal="mouse_entered" from="Overlay/Triggers/D" to="." method="_on_D_mouse_entered"]
